# BodyPartsSegmentor

./: .gitmodules
include/: SensorDevice.h  Skeleton.h
proj/cmake/: CMakeLists.txt
src/: BodyPartsSegmentorApp.cpp  SensorDevice.cpp
xcode/BodyPartsSegmentor.xcodeproj/: project.pbxproj
